--- a/H1.ipynb
+++ b/H1.ipynb
@@ -585,14 +585,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o5pap43SGS_9"
+        "id": "o5pap43SGS_9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e70b54bb-883b-4bf7-f8bf-8e0ecb7670f0"
       },
       "source": [
         "# This code shows the use math module \n",
         "# Run time error and Logical Error \n",
-        "\n",
+        "import math\n",
         "from math import sin\n",
-        "r= sin(c)\n",
+        "c = float (input(\"enter the radian value to find the sine value of:\\n\"))\n",
+        "r = sin(c)\n",
+        "print (r)\n",
         "\n",
         "x=2.4\n",
         "y = 2.5 + 3j\n",
@@ -607,7 +613,28 @@
         "math.sin(y_new)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the radian value to find the sine value of:\n",
+            "3.14\n",
+            "0.0015926529164868282\n",
+            "3.905124837953327\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.6914773966101274"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
